components/gatekeeper-constraints/explicit-gateway-hosts/samples/wildcard/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: IstioExplicitGatewayHost
metadata:
  name: explicitgatewayhost
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["networking.istio.io"]
        kinds: ["Gateway"]
    namespaceSelector:
      matchExpressions:
        - key: istio.io/rev
          operator: Exists
  parameters:
    disallowedHosts:
    - "*"
